# ground-station

./: pyproject.toml
simple_gs/: HelloWorldPacket_pb2.py  TelemetryPacket_pb2.py  __init__.py  decoder.py
streaming/: main.py
streaming/captures/: capture_20260125_150123.txt  capture_20260125_153818.txt  capture_20260125_165753.txt
streaming/overlays/: __init__.py  static_image.py  telemetry.py
tracking-beacon-firmware/: CMakeLists.txt  tracking-beacon-firmware.ioc
tracking-beacon-firmware/.claude/: settings.local.json
tracking-beacon-firmware/Core/Inc/: passthrough.h  rssi.h  setup.h  stm32f4xx_it.h  tracker.h
tracking-beacon-firmware/Core/Src/: main.c  passthrough.c  rssi.c  setup.c  stepper.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tracker.c
